[package]
name = "lan9252"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
cortex-m-rt = "0.7.3"
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
defmt = "0.3.6"
defmt-rtt = "0.4.0"
embassy-executor = { version = "0.5.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "stm32f407zg",
    "rt",
    "exti",
    "memory-x",
    "time-driver-any",
] }
heapless = { version = "0.8", default-features = false }
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
debug = 2
